# beerpong

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: docs.yml  flake8.yml  labeler.yml  mypy.yml  publish.yml  pylint.yml  pytest.yml  release.yml
beerpong/cli/: beerpong.py  cli.py
beerpong/gui/: gui.py  login.py  management.py
beerpong/logic/: bracket.py  score.py  team.py
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
tests/: test_bracket.py  test_score.py  test_team.py
