[metadata]
name = beerpong
version = file: VERSION
description = Bracketing tool with beerpong in mind
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/juhannc/beerpong.git
author = Johann Christensen
author_email = johannchristensen@outlook.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Games/Entertainment
project_urls =
#    Documentation =
    Source = https://github.com/juhannc/beerpong.git
    Tracker = https://github.com/juhannc/beerpong/issues

[options]
zip_safe = False
packages = find:
platforms =
    macosx_13_x86_64
    manylinux2014_x86_64
    manylinux2014_aarch64
    manylinux2014_armv7l
    win_amd64
include_package_data = True
install_requires =
    PyQt6==6.5.2
python_requires = >=3.8

[options.entry_points]
console_scripts =
    beerpong = beerpong.cli.cli:main

[options.extras_require]
tests =
    coverage
    flake8
    mypy
    pre-commit
    pycodestyle
    pytest >= 6.2.2
    pytest-cov
    pylint
all =
    %(tests)s

[flake8]
max-line-length = 88
max-complexity = 10
# E203: incorrectly triggers on array slices: <https://github.com/PyCQA/pycodestyle/issues/373>
# SIM300: Yoda conditions might be more reliable but not more readable
extend-ignore = E203, SIM300

[mypy]
python_version = 3.8
ignore_missing_imports = True
# plugins = numpy.typing.mypy_plugin # TODO @johannchristensen@outlook.de: activate if you are using numpy
